--- a/index.html
+++ b/index.html
@@ -18,13 +18,12 @@
   allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr; xr-spatial-tracking"
   sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts"
 ></iframe>
-    <iframe src="https://pnyj44-5173.csb.app/"
+    <iframe src="https://w4ljm8-5173.csb.app/"
      style="width:100%; height: 500px; border:0; border-radius: 4px; overflow:hidden;"
      title="Sashank-Deb/react-compiler-poc/csb-pnyj44/draft/friendly-shape"
      allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr; xr-spatial-tracking"
      sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts"
    ></iframe>
-   <a href="https://codesandbox.io/p/github/Sashank-Deb/react-compiler-poc/main?import=true&embed=1&file=%2Fsrc%2FApp.jsx">View Code</a>
     
 </body>
 </html>
